<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".practicafinal.iniciosesion.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/FieldStyle"
        android:id="@+id/emailEditText"
        android:hint="@string/email_hint"
        android:layout_gravity="center"
        android:layout_marginBottom="110dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/FieldStyle"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginBottom="65dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/loginButton"
        android:text="@string/login_button_label"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/NavigationButonStyle"
        android:id="@+id/registerButton"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:text="@string/register_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>