<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".practicafinal.iniciosesion.HomeActivity">

    <ImageView
        android:id="@+id/ivHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordOutputText"
        android:layout_marginTop="16dp"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <TextView
        style="@style/TextView"
        android:id="@+id/welcomeLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:text="@string/welcome_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:gravity="center_horizontal"
        />

    <TextView
        style="@style/TextView"
        android:text="@string/full_name_label"
        android:id="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@id/welcomeLabel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        />

    <TextView
        android:hint="name Output"
        style="@style/TextView"
        android:id="@+id/nameOutputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLabel" />

    <TextView
        android:id="@+id/emailLabel"
        style="@style/TextView"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameOutputText" />

    <TextView
        android:id="@+id/passwordLabel"
        style="@style/TextView"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailOutputText" />

    <TextView
        android:id="@+id/passwordOutputText"
        style="@style/TextView"
        android:hint="pasword output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        />

    <TextView
        android:hint="email out"
        android:id="@+id/emailOutputText"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emailLabel"
        app:layout_constraintTop_toBottomOf="@id/emailLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>